# VoiceCompanionAI

./: .gitignore  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose-ex.yml  pyproject.toml  requirements.txt
ai/: personality_parser.py  prompt_builder.py  prompt_versions.py
ai/intents/: story.py
ai/prompts/: __init__.py  modes.py  safety_kid.py  system_buddy.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  a36252f2dcbb_add_fields.py  e7cababcdc36_add_fields_to_conversations.py
api/app/: config.py  dependencies.py  main.py
api/app/middleware/: auth.py
api/app/routes/: __init__.py  audio.py  bot_profile.py  health.py  voice.py
api/app/schemas/: __init__.py  bot_profile.py  dev_voice.py  voice.py
db/: engine.py  session.py
device/: __init__.py  agent.py
jobs/: handlers.py  queue.py
models/: __init__.py  base.py  bot_profile.py  conversation.py  device.py  event.py  interaction.py  job.py  memory.py  memory_embedding.py  user.py  user_profile.py
samples/: .gitignore
scripts/: seed_bot_profile.py
services/: emotion_detector.py  favorite_characters.py  memory_service.py  observability.py  openai_embeddings.py  openai_llm.py  openai_stt.py  openai_tts.py
tests/: conftest.py  test_emotion_detector.py  test_job_queue.py  test_memory_service.py  test_personality_parser.py  test_prompt_builder.py  test_wake_wav.py
worker/: main.py
