[project]
name = "companion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.13,<2",
    "pgvector>=0.3,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "python-multipart>=0.0.9",
    "openai>=1.14,<2",
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
device = [
    "sounddevice>=0.4,<1",
    "soundfile>=0.12,<1",
    "requests>=2.31,<3",
]
test = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "aiosqlite>=0.20,<1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
